Remove usage of TransactionTemplate Simplify some insert and update operations